# PentaShield

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
deploy/kubernetes/scanner-ultra/: Chart.yaml  values.yaml
deploy/kubernetes/scanner-ultra/templates/: deployment.yaml
deploy/monitoring/: grafana-dashboard.json  prometheus.yaml
docs/: api-reference.md  architecture.md  deployment.md  pentashield-whitepaper.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: Dashboard.jsx  Landing.jsx  main.jsx
integrations/browser-extension/: background.js  content.js  manifest.json
sdk/javascript/: README.md  package.json
sdk/javascript/src/: client.ts  errors.ts  index.ts  types.ts
sdk/python/: README.md  setup.py
sdk/python/scanner_sdk/: __init__.py  client.py  exceptions.py  models.py
src/scanner/: __init__.py  config.py  main.py
src/scanner/api/auth/: middleware.py  rate_limiter.py
src/scanner/api/v1/: challenge.py  health.py  reports.py  results.py  router.py  scan.py
src/scanner/core/: base_detector.py  orchestrator.py
src/scanner/core/audio/: audio_ensemble.py  cqt_detector.py  ecapa_tdnn_detector.py  mel_audio_detector.py  syncnet_detector.py  voice_clone_detector.py  wavlm_detector.py
src/scanner/core/defense/: hash_database.py  metadata_forensics.py  provenance_checker.py
src/scanner/core/fusion/: confidence_calibrator.py  cross_modal_attention.py  temporal_consistency.py  trust_score_engine.py
src/scanner/core/text/: ai_text_detector.py  perplexity_detector.py  stylometric_detector.py
src/scanner/core/visual/: clip_detector.py  (+9 more)
src/scanner/models/: __init__.py  enums.py  loader.py  registry.py  schemas.py
src/scanner/pentashield/: __init__.py  engine.py
src/scanner/preprocessing/: __init__.py  audio_processor.py  image_processor.py  quality_adapter.py  text_processor.py  video_processor.py
tests/: conftest.py  test_ghost_protocol.py
tests/unit/: test_api.py  test_base_detector.py  test_config.py  test_defense.py  test_detectors.py  test_fusion.py  test_orchestrator.py  test_pentashield_engine.py  test_pentashield_hydra.py  test_pentashield_sentinel.py  test_preprocessing.py  test_schemas.py
(+33 files in other folders)
