[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanner-ultra"
version = "5.0.0"
description = "Advanced multi-modal deepfake detection engine — PentaShield Edition"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Scanner Technologies"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "mediapipe>=0.10.13",
    "timm>=0.9.12",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
enterprise = [
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "reportlab>=4.0.0",
    "celery[redis]>=5.3.0",
]
pentashield = [
    "transformers>=4.38.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
]
dashboard = [
    "streamlit>=1.31.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
monitoring = [
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
]
all = [
    "scanner-ultra[enterprise,pentashield,dashboard,dev,monitoring]",
]

[project.scripts]
scanner = "scanner.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests requiring GPU",
]
